samples/_failures_safe/1761070549_52ed69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_229e77d0.c: In function ‘main’:
./samples/SAFE/__tmp_229e77d0.c:150:9: error: expected declaration or statement at end of input
  150 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_229e77d0.c:150:9: error: expected declaration or statement at end of input
